Adjust spacing issues

--- a/src/components/Splash/splash.sass
+++ b/src/components/Splash/splash.sass
@@ -12,7 +12,7 @@
     display: flex
     gap: 6px
     top: 45%
-    left: 50%
+    left: 54%
     color: white
     transform: translate(-50%, -50%)
     font-size: 2rem
@@ -20,15 +20,5 @@
   span
     position: relative
     display: inline-block
-  
-  // span.active
-  //   bottom: 0
-  //   opacity: 1
-  //   transition: ease-in-out 0.5s
-
-  // span.active
-  //   bottom: 150px
-  //   opacity: 0
-  //   transition: ease-in-out 0.5s
     
     
